--- a/portfolio.html
+++ b/portfolio.html
@@ -28,7 +28,82 @@
         <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
       </ul>
     </header>
-    <main></main>
+    <main>
+      <section>
+        <ul class="filter-list">
+          <li><button type="button" class="filter-button">Усі</button></li>
+          <li><button type="button" class="filter-button">Веб-сайти</button></li>
+          <li><button type="button" class="filter-button">Додатки</button></li>
+          <li><button type="button" class="filter-button">Дизайн</button></li>
+          <li><button type="button" class="filter-button">Маркетинг</button></li>
+        </ul>
+        <ul class="card-list">
+          <li>
+            <a href="" class="card">
+              <img src="./images/img_1.jpg" alt="" class="card-photo" />
+              <h2 class="card-title">Технокряк</h2>
+              <p class="card-subtitle">Веб-сайт</p>
+            </a>
+          </li>
+          <li>
+            <a href="" class="card">
+              <img src="./images/img_2.jpg" alt="" class="card-photo" />
+              <h2 class="card-title">Постер <span lang="en">New Orlean vs Golden Star</span></h2>
+              <p class="card-subtitle">Дизайн</p>
+            </a>
+          </li>
+          <li>
+            <a href="" class="card">
+              <img src="./images/img_3.jpg" alt="" class="card-photo" />
+              <h2 class="card-title">Ресторан <span lang="en">Seafood</span></h2>
+              <p class="card-subtitle">Додаток</p>
+            </a>
+          </li>
+          <li>
+            <a href="" class="card">
+              <img src="./images/img_4.jpg" alt="" class="card-photo" />
+              <h2 class="card-title">Проєкт <span lang="en">Prime</span></h2>
+              <p class="card-subtitle">Маркетинг</p>
+            </a>
+          </li>
+          <li>
+            <a href="" class="card">
+              <img src="./images/img_5.jpg" alt="" class="card-photo" />
+              <h2 class="card-title">Проєкт <span lang="en">Boxes</span></h2>
+              <p class="card-subtitle">Додаток</p>
+            </a>
+          </li>
+          <li>
+            <a href="" class="card">
+              <img src="./images/img_6.jpg" alt="" class="card-photo" />
+              <h2 class="card-title"><span lang="en">Inspiration has no Borders</span></h2>
+              <p class="card-subtitle">Веб-сайт</p>
+            </a>
+          </li>
+          <li>
+            <a href="" class="card">
+              <img src="./images/img_7.jpg" alt="" class="card-photo" />
+              <h2 class="card-title">Видання <span lang="en">Limited Edition</span></h2>
+              <p class="card-subtitle">Дизайн</p>
+            </a>
+          </li>
+          <li>
+            <a href="" class="card">
+              <img src="./images/img_8.jpg" alt="" class="card-photo" />
+              <h2 class="card-title">Проєкт <span lang="en">LAB</span></h2>
+              <p class="card-subtitle">Маркетинг</p>
+            </a>
+          </li>
+          <li>
+            <a href="" class="card">
+              <img src="./images/img_9.jpg" alt="" class="card-photo" />
+              <h2 class="card-title"><span lang="en">Growing Business</span></h2>
+              <p class="card-subtitle">Додаток</p>
+            </a>
+          </li>
+        </ul>
+      </section>
+    </main>
     <footer>
       <a href="index.html" lang="en"><span>Web</span>Studio</a>
       <address>
