--- a/index.html
+++ b/index.html
@@ -8,91 +8,115 @@
     <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
-    <header>
-      <a href="index.html" lang="en"><span>Web</span>Studio</a>
-      <nav>
-        <ul>
-          <li>
+    <!-- Шапка сайта -->
+    <header class="page-header">
+      <!-- Лого -->
+      <a href="index.html" lang="en" class="logo"><span>Web</span>Studio</a>
+      <!-- Навигация -->
+      <nav class="site-nav">
+        <ul class="nav-list">
+          <li class="nav-link">
             <a href="index.html">Студія</a>
           </li>
-          <li>
+          <li class="nav-link">
             <a href="portfolio.html">Портфоліо</a>
           </li>
-          <li>
+          <li class="nav-link">
             <a href="">Контакти</a>
           </li>
         </ul>
       </nav>
-      <ul>
-        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+      <!-- Контакты -->
+      <ul class="contact-list">
+        <li class="contact-item">
+          <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+        </li>
+        <li class="contact-item">
+          <a href="tel:+380961111111">+38 096 111 11 11</a>
+        </li>
       </ul>
     </header>
-    <main>
-      <section>
-        <h1>Ефективні рішення для вашого бізнесу</h1>
-        <button type="button">Замовити послугу</button>
+    <!-- Контент страницы -->
+    <main class="main-page">
+      <!-- Хиро -->
+      <section class="hero">
+        <h1 class="hero-title">Ефективні рішення для вашого бізнесу</h1>
+        <button type="button" class="hero-button">Замовити послугу</button>
       </section>
-      <section>
-        <h2>Особливості</h2>
-        <ul>
-          <li>
-            <h3>УВАГА ДО ДЕТАЛЕЙ</h3>
-            <p>Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
+      <!-- Особенности -->
+      <section class="features">
+        <h2 hidden>Особливості</h2>
+        <ul class="features-list">
+          <li class="features-item">
+            <h3 class="features-title">УВАГА ДО ДЕТАЛЕЙ</h3>
+            <p class="features-text">
+              Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.
+            </p>
           </li>
-          <li>
-            <h3>ПУНКТУАЛЬНІСТЬ</h3>
-            <p>Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
+          <li class="features-item">
+            <h3 class="features-title">ПУНКТУАЛЬНІСТЬ</h3>
+            <p class="features-text">
+              Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.
+            </p>
           </li>
-          <li>
-            <h3>ПЛАНУВАННЯ</h3>
-            <p>Так само консультація з широким активом значною мірою зумовлює.</p>
+          <li class="features-item">
+            <h3 class="features-title">ПЛАНУВАННЯ</h3>
+            <p class="features-text">
+              Так само консультація з широким активом значною мірою зумовлює.
+            </p>
           </li>
-          <li>
-            <h3>СУЧАСНІ ТЕХНОЛОГІЇ</h3>
-            <p>Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
+          <li class="features-item">
+            <h3 class="features-title">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
+            <p class="features-text">
+              Значимість цих проблем настільки очевидна, що реалізація планових завдань.
+            </p>
           </li>
         </ul>
       </section>
-      <section>
-        <h2>Чим ми займаємося</h2>
-        <ul>
-          <li><img src="./images/work1.jpg" alt="розробляємо" width="370" /></li>
-          <li><img src="./images/work2.jpg" alt="адаптуємо" width="370" /></li>
-          <li><img src="./images/work3.jpg" alt="малюємо" width="370" /></li>
+      <!-- Чем занимаемся -->
+      <section class="our-works">
+        <h2 class="works-title">Чим ми займаємося</h2>
+        <ul class="works-list">
+          <li class="works-item"><img src="./images/work1.jpg" alt="розробляємо" width="370" /></li>
+          <li class="works-item"><img src="./images/work2.jpg" alt="адаптуємо" width="370" /></li>
+          <li class="works-item"><img src="./images/work3.jpg" alt="малюємо" width="370" /></li>
         </ul>
       </section>
-      <section>
-        <h2>Наша команда</h2>
-        <ul>
-          <li>
-            <img src="./images/team1.jpg" alt="ігор" width="270" />
-            <h3>Ігор Дем'яненко</h3>
-            <p>Product Designer</p>
+      <!-- Наша Команда -->
+      <section class="team">
+        <h2 class="team-title">Наша команда</h2>
+        <ul class="teammate-list">
+          <li class="teammate-card">
+            <img src="./images/team1.jpg" alt="ігор" width="270" class="teammate-photo" />
+            <h3 class="teammate-name">Ігор Дем'яненко</h3>
+            <p class="teammate-position">Product Designer</p>
           </li>
-          <li>
-            <img src="./images/team2.jpg" alt="ольга" width="270" />
-            <h3>Ольга Рєпіна</h3>
-            <p>Frontend Developer</p>
+          <li class="teammate-card">
+            <img src="./images/team2.jpg" alt="ольга" width="270" class="teammate-photo" />
+            <h3 class="teammate-name">Ольга Рєпіна</h3>
+            <p class="teammate-position">Frontend Developer</p>
           </li>
-          <li>
-            <img src="./images/team3.jpg" alt="микола" width="270" />
-            <h3>Микола Тарасов</h3>
-            <p>Marketing</p>
+          <li class="teammate-card">
+            <img src="./images/team3.jpg" alt="микола" width="270" class="teammate-photo" />
+            <h3 class="teammate-name">Микола Тарасов</h3>
+            <p class="teammate-position">Marketing</p>
           </li>
-          <li>
-            <img src="./images/team4.jpg" alt="михайло" width="270" />
-            <h3>Михайло Єрмаков</h3>
-            <p>UI Designer</p>
+          <li class="teammate-card">
+            <img src="./images/team4.jpg" alt="михайло" width="270" class="teammate-photo" />
+            <h3 class="teammate-name">Михайло Єрмаков</h3>
+            <p class="teammate-position">UI Designer</p>
           </li>
         </ul>
       </section>
     </main>
+    <!-- Подвал -->
     <footer>
-      <a href="index.html" lang="en"><span>Web</span>Studio</a>
-      <address>
-        <ul>
-          <li>
+      <!-- Лого -->
+      <a href="index.html" lang="en" class="logo"><span>Web</span>Studio</a>
+      <!-- Адрес и контакты -->
+      <address class="footer-address">
+        <ul class="contact-list">
+          <li class="contact-item">
             <a
               href="https://goo.gl/maps/pj5dTkwZmLneym9N6"
               target="_blank"
@@ -100,8 +124,8 @@
               >м. Київ, пр-т Лесі Українки, 26</a
             >
           </li>
-          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+          <li class="contact-item"><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+          <li class="contact-item"><a href="tel:+380961111111">+38 096 111 11 11</a></li>
         </ul>
       </address>
     </footer>
