--- a/portfolio.html
+++ b/portfolio.html
@@ -8,28 +8,40 @@
     <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
-    <header>
-      <a href="index.html" lang="en"><span>Web</span>Studio</a>
-      <nav>
-        <ul>
-          <li>
+    <!-- Шапка сайта -->
+    <header class="page-header">
+      <!-- Лого -->
+      <a href="index.html" lang="en" class="logo"><span>Web</span>Studio</a>
+      <!-- Навигация -->
+      <nav class="site-nav">
+        <ul class="nav-list">
+          <li class="nav-link">
             <a href="index.html">Студія</a>
           </li>
-          <li>
+          <li class="nav-link">
             <a href="portfolio.html">Портфоліо</a>
           </li>
-          <li>
+          <li class="nav-link">
             <a href="">Контакти</a>
           </li>
         </ul>
       </nav>
-      <ul>
-        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+      <!-- Контакты -->
+      <ul class="contact-list">
+        <li class="contact-item">
+          <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+        </li>
+        <li class="contact-item">
+          <a href="tel:+380961111111">+38 096 111 11 11</a>
+        </li>
       </ul>
     </header>
-    <main>
-      <section>
+    <!-- Контент страницы -->
+    <main class="main-page">
+      <!-- Портфолио -->
+      <section class="portfolio">
+        <h1 hidden>Портфоліо</h1>
+        <!-- Фильтр -->
         <ul class="filter-list">
           <li><button type="button" class="filter-button">Усі</button></li>
           <li><button type="button" class="filter-button">Веб-сайти</button></li>
@@ -37,65 +49,66 @@
           <li><button type="button" class="filter-button">Дизайн</button></li>
           <li><button type="button" class="filter-button">Маркетинг</button></li>
         </ul>
-        <ul class="card-list">
-          <li>
-            <a href="" class="card">
+        <!-- Карточки работ -->
+        <ul class="portfolio-cards">
+          <li class="card">
+            <a href="" class="card-link">
               <img src="./images/img_1.jpg" alt="" class="card-photo" />
               <h2 class="card-title">Технокряк</h2>
               <p class="card-subtitle">Веб-сайт</p>
             </a>
           </li>
-          <li>
-            <a href="" class="card">
+          <li class="card">
+            <a href="" class="card-link">
               <img src="./images/img_2.jpg" alt="" class="card-photo" />
               <h2 class="card-title">Постер <span lang="en">New Orlean vs Golden Star</span></h2>
               <p class="card-subtitle">Дизайн</p>
             </a>
           </li>
-          <li>
-            <a href="" class="card">
+          <li class="card">
+            <a href="" class="card-link">
               <img src="./images/img_3.jpg" alt="" class="card-photo" />
               <h2 class="card-title">Ресторан <span lang="en">Seafood</span></h2>
               <p class="card-subtitle">Додаток</p>
             </a>
           </li>
-          <li>
-            <a href="" class="card">
+          <li class="card">
+            <a href="" class="card-link">
               <img src="./images/img_4.jpg" alt="" class="card-photo" />
               <h2 class="card-title">Проєкт <span lang="en">Prime</span></h2>
               <p class="card-subtitle">Маркетинг</p>
             </a>
           </li>
-          <li>
-            <a href="" class="card">
+          <li class="card">
+            <a href="" class="card-link">
               <img src="./images/img_5.jpg" alt="" class="card-photo" />
               <h2 class="card-title">Проєкт <span lang="en">Boxes</span></h2>
               <p class="card-subtitle">Додаток</p>
             </a>
           </li>
-          <li>
-            <a href="" class="card">
+          <li class="card">
+            <a href="" class="card-link">
               <img src="./images/img_6.jpg" alt="" class="card-photo" />
               <h2 class="card-title"><span lang="en">Inspiration has no Borders</span></h2>
               <p class="card-subtitle">Веб-сайт</p>
             </a>
           </li>
-          <li>
-            <a href="" class="card">
+          <li class="card">
+            <a href="" class="card-link">
               <img src="./images/img_7.jpg" alt="" class="card-photo" />
               <h2 class="card-title">Видання <span lang="en">Limited Edition</span></h2>
               <p class="card-subtitle">Дизайн</p>
             </a>
           </li>
-          <li>
-            <a href="" class="card">
+          <li class="card">
+            <a href="" class="card-link">
               <img src="./images/img_8.jpg" alt="" class="card-photo" />
               <h2 class="card-title">Проєкт <span lang="en">LAB</span></h2>
               <p class="card-subtitle">Маркетинг</p>
             </a>
           </li>
-          <li>
-            <a href="" class="card">
+          <li class="card">
+            <a href="" class="card-link">
               <img src="./images/img_9.jpg" alt="" class="card-photo" />
               <h2 class="card-title"><span lang="en">Growing Business</span></h2>
               <p class="card-subtitle">Додаток</p>
@@ -104,11 +117,14 @@
         </ul>
       </section>
     </main>
+    <!-- Подвал -->
     <footer>
-      <a href="index.html" lang="en"><span>Web</span>Studio</a>
-      <address>
-        <ul>
-          <li>
+      <!-- Лого -->
+      <a href="index.html" lang="en" class="logo"><span>Web</span>Studio</a>
+      <!-- Адрес и контакты -->
+      <address class="footer-address">
+        <ul class="contact-list">
+          <li class="contact-item">
             <a
               href="https://goo.gl/maps/pj5dTkwZmLneym9N6"
               target="_blank"
@@ -116,8 +132,8 @@
               >м. Київ, пр-т Лесі Українки, 26</a
             >
           </li>
-          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+          <li class="contact-item"><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+          <li class="contact-item"><a href="tel:+380961111111">+38 096 111 11 11</a></li>
         </ul>
       </address>
     </footer>
