--- a/index.html
+++ b/index.html
@@ -6,33 +6,39 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Web Studio</title>
     <link rel="stylesheet" href="css/styles.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <!-- Шапка сайта -->
     <header class="page-header">
       <!-- Лого -->
-      <a href="index.html" lang="en" class="logo"><span>Web</span>Studio</a>
+      <a href="index.html" lang="en" class="logo link"><span>Web</span>Studio</a>
       <!-- Навигация -->
       <nav class="site-nav">
-        <ul class="nav-list">
+        <ul class="nav-list list">
           <li class="nav-link">
-            <a href="index.html">Студія</a>
+            <a href="index.html" class="link">Студія</a>
           </li>
           <li class="nav-link">
-            <a href="portfolio.html">Портфоліо</a>
+            <a href="portfolio.html" class="link">Портфоліо</a>
           </li>
           <li class="nav-link">
-            <a href="">Контакти</a>
+            <a href="" class="link">Контакти</a>
           </li>
         </ul>
       </nav>
       <!-- Контакты -->
-      <ul class="contact-list">
+      <ul class="contact-list list">
         <li class="contact-item">
-          <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+          <a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a>
         </li>
         <li class="contact-item">
-          <a href="tel:+380961111111">+38 096 111 11 11</a>
+          <a href="tel:+380961111111" class="link">+38 096 111 11 11</a>
         </li>
       </ul>
     </header>
@@ -40,33 +46,33 @@
     <main class="main-page">
       <!-- Хиро -->
       <section class="hero">
-        <h1 class="hero-title">Ефективні рішення для вашого бізнесу</h1>
-        <button type="button" class="hero-button">Замовити послугу</button>
+        <h1 class="hero-title title">Ефективні рішення для вашого бізнесу</h1>
+        <button type="button" class="hero-button btn">Замовити послугу</button>
       </section>
       <!-- Особенности -->
       <section class="features">
-        <h2 hidden>Особливості</h2>
-        <ul class="features-list">
+        <h2 class="visually-hidden title">Особливості</h2>
+        <ul class="features-list list">
           <li class="features-item">
-            <h3 class="features-title">УВАГА ДО ДЕТАЛЕЙ</h3>
+            <h3 class="features-title title">УВАГА ДО ДЕТАЛЕЙ</h3>
             <p class="features-text">
               Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.
             </p>
           </li>
           <li class="features-item">
-            <h3 class="features-title">ПУНКТУАЛЬНІСТЬ</h3>
+            <h3 class="features-title title">ПУНКТУАЛЬНІСТЬ</h3>
             <p class="features-text">
               Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.
             </p>
           </li>
           <li class="features-item">
-            <h3 class="features-title">ПЛАНУВАННЯ</h3>
+            <h3 class="features-title title">ПЛАНУВАННЯ</h3>
             <p class="features-text">
               Так само консультація з широким активом значною мірою зумовлює.
             </p>
           </li>
           <li class="features-item">
-            <h3 class="features-title">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
+            <h3 class="features-title title">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
             <p class="features-text">
               Значимість цих проблем настільки очевидна, що реалізація планових завдань.
             </p>
@@ -75,8 +81,8 @@
       </section>
       <!-- Чем занимаемся -->
       <section class="our-works">
-        <h2 class="works-title">Чим ми займаємося</h2>
-        <ul class="works-list">
+        <h2 class="works-title title">Чим ми займаємося</h2>
+        <ul class="works-list list">
           <li class="works-item"><img src="./images/work1.jpg" alt="розробляємо" width="370" /></li>
           <li class="works-item"><img src="./images/work2.jpg" alt="адаптуємо" width="370" /></li>
           <li class="works-item"><img src="./images/work3.jpg" alt="малюємо" width="370" /></li>
@@ -84,26 +90,26 @@
       </section>
       <!-- Наша Команда -->
       <section class="team">
-        <h2 class="team-title">Наша команда</h2>
-        <ul class="teammate-list">
+        <h2 class="team-title title">Наша команда</h2>
+        <ul class="teammate-list list">
           <li class="teammate-card">
             <img src="./images/team1.jpg" alt="ігор" width="270" class="teammate-photo" />
-            <h3 class="teammate-name">Ігор Дем'яненко</h3>
+            <h3 class="teammate-name title">Ігор Дем'яненко</h3>
             <p class="teammate-position">Product Designer</p>
           </li>
           <li class="teammate-card">
             <img src="./images/team2.jpg" alt="ольга" width="270" class="teammate-photo" />
-            <h3 class="teammate-name">Ольга Рєпіна</h3>
+            <h3 class="teammate-name title">Ольга Рєпіна</h3>
             <p class="teammate-position">Frontend Developer</p>
           </li>
           <li class="teammate-card">
             <img src="./images/team3.jpg" alt="микола" width="270" class="teammate-photo" />
-            <h3 class="teammate-name">Микола Тарасов</h3>
+            <h3 class="teammate-name title">Микола Тарасов</h3>
             <p class="teammate-position">Marketing</p>
           </li>
           <li class="teammate-card">
             <img src="./images/team4.jpg" alt="михайло" width="270" class="teammate-photo" />
-            <h3 class="teammate-name">Михайло Єрмаков</h3>
+            <h3 class="teammate-name title">Михайло Єрмаков</h3>
             <p class="teammate-position">UI Designer</p>
           </li>
         </ul>
@@ -112,20 +118,25 @@
     <!-- Подвал -->
     <footer>
       <!-- Лого -->
-      <a href="index.html" lang="en" class="logo"><span>Web</span>Studio</a>
+      <a href="index.html" lang="en" class="logo link"><span>Web</span>Studio</a>
       <!-- Адрес и контакты -->
-      <address class="footer-address">
-        <ul class="contact-list">
-          <li class="contact-item">
+      <address class="footer-address address">
+        <ul class="contact-list list">
+          <li class="contact-item link">
             <a
               href="https://goo.gl/maps/pj5dTkwZmLneym9N6"
               target="_blank"
               rel="noopener nofollow noreferrer"
+              class="link"
               >м. Київ, пр-т Лесі Українки, 26</a
             >
           </li>
-          <li class="contact-item"><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li class="contact-item"><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+          <li class="contact-item link">
+            <a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a>
+          </li>
+          <li class="contact-item link">
+            <a href="tel:+380961111111" class="link">+38 096 111 11 11</a>
+          </li>
         </ul>
       </address>
     </footer>
