--- a/portfolio.html
+++ b/portfolio.html
@@ -6,33 +6,39 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Web Studio</title>
     <link rel="stylesheet" href="css/styles.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <!-- Шапка сайта -->
     <header class="page-header">
       <!-- Лого -->
-      <a href="index.html" lang="en" class="logo"><span>Web</span>Studio</a>
+      <a href="index.html" lang="en" class="logo link"><span>Web</span>Studio</a>
       <!-- Навигация -->
       <nav class="site-nav">
-        <ul class="nav-list">
+        <ul class="nav-list list">
           <li class="nav-link">
-            <a href="index.html">Студія</a>
+            <a href="index.html" class="link">Студія</a>
           </li>
           <li class="nav-link">
-            <a href="portfolio.html">Портфоліо</a>
+            <a href="portfolio.html" class="link">Портфоліо</a>
           </li>
           <li class="nav-link">
-            <a href="">Контакти</a>
+            <a href="" class="link">Контакти</a>
           </li>
         </ul>
       </nav>
       <!-- Контакты -->
-      <ul class="contact-list">
+      <ul class="contact-list list">
         <li class="contact-item">
-          <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+          <a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a>
         </li>
         <li class="contact-item">
-          <a href="tel:+380961111111">+38 096 111 11 11</a>
+          <a href="tel:+380961111111" class="link">+38 096 111 11 11</a>
         </li>
       </ul>
     </header>
@@ -40,77 +46,79 @@
     <main class="main-page">
       <!-- Портфолио -->
       <section class="portfolio">
-        <h1 hidden>Портфоліо</h1>
+        <h1 class="visually-hidden title">Портфоліо</h1>
         <!-- Фильтр -->
-        <ul class="filter-list">
-          <li><button type="button" class="filter-button">Усі</button></li>
-          <li><button type="button" class="filter-button">Веб-сайти</button></li>
-          <li><button type="button" class="filter-button">Додатки</button></li>
-          <li><button type="button" class="filter-button">Дизайн</button></li>
-          <li><button type="button" class="filter-button">Маркетинг</button></li>
+        <ul class="filter-list list">
+          <li><button type="button" class="filter-button btn">Усі</button></li>
+          <li><button type="button" class="filter-button btn">Веб-сайти</button></li>
+          <li><button type="button" class="filter-button btn">Додатки</button></li>
+          <li><button type="button" class="filter-button btn">Дизайн</button></li>
+          <li><button type="button" class="filter-button btn">Маркетинг</button></li>
         </ul>
         <!-- Карточки работ -->
-        <ul class="portfolio-cards">
+        <ul class="portfolio-cards list">
           <li class="card">
-            <a href="" class="card-link">
+            <a href="" class="card-link link">
               <img src="./images/img_1.jpg" alt="" class="card-photo" />
-              <h2 class="card-title">Технокряк</h2>
+              <h2 class="card-title title">Технокряк</h2>
               <p class="card-subtitle">Веб-сайт</p>
             </a>
           </li>
           <li class="card">
-            <a href="" class="card-link">
+            <a href="" class="card-link link">
               <img src="./images/img_2.jpg" alt="" class="card-photo" />
-              <h2 class="card-title">Постер <span lang="en">New Orlean vs Golden Star</span></h2>
+              <h2 class="card-title title">
+                Постер <span lang="en">New Orlean vs Golden Star</span>
+              </h2>
               <p class="card-subtitle">Дизайн</p>
             </a>
           </li>
           <li class="card">
-            <a href="" class="card-link">
+            <a href="" class="card-link link">
               <img src="./images/img_3.jpg" alt="" class="card-photo" />
-              <h2 class="card-title">Ресторан <span lang="en">Seafood</span></h2>
+              <h2 class="card-title title">Ресторан <span lang="en">Seafood</span></h2>
               <p class="card-subtitle">Додаток</p>
             </a>
           </li>
           <li class="card">
-            <a href="" class="card-link">
+            <a href="" class="card-link link">
               <img src="./images/img_4.jpg" alt="" class="card-photo" />
-              <h2 class="card-title">Проєкт <span lang="en">Prime</span></h2>
+              <h2 class="card-title title">Проєкт <span lang="en">Prime</span></h2>
               <p class="card-subtitle">Маркетинг</p>
             </a>
           </li>
           <li class="card">
-            <a href="" class="card-link">
+            <a href="" class="card-link link">
               <img src="./images/img_5.jpg" alt="" class="card-photo" />
-              <h2 class="card-title">Проєкт <span lang="en">Boxes</span></h2>
+              <h2 class="card-title title">Проєкт <span lang="en">Boxes</span></h2>
               <p class="card-subtitle">Додаток</p>
             </a>
           </li>
           <li class="card">
-            <a href="" class="card-link">
+            <a href="" class="card-link link">
               <img src="./images/img_6.jpg" alt="" class="card-photo" />
-              <h2 class="card-title"><span lang="en">Inspiration has no Borders</span></h2>
+              <h2 class="card-title title"><span lang="en">Inspiration has no Borders</span></h2>
               <p class="card-subtitle">Веб-сайт</p>
             </a>
           </li>
           <li class="card">
-            <a href="" class="card-link">
+            <a href="" class="card-link link">
               <img src="./images/img_7.jpg" alt="" class="card-photo" />
-              <h2 class="card-title">Видання <span lang="en">Limited Edition</span></h2>
+              <h2 class="card-title title">Видання <span lang="en">Limited Edition</span></h2>
               <p class="card-subtitle">Дизайн</p>
             </a>
           </li>
           <li class="card">
-            <a href="" class="card-link">
+            <a href="" class="card-link link">
               <img src="./images/img_8.jpg" alt="" class="card-photo" />
-              <h2 class="card-title">Проєкт <span lang="en">LAB</span></h2>
+              <h2 class="card-title title">Проєкт <span lang="en">LAB</span></h2>
               <p class="card-subtitle">Маркетинг</p>
             </a>
           </li>
           <li class="card">
-            <a href="" class="card-link">
+            <a href="" class="card-link link">
               <img src="./images/img_9.jpg" alt="" class="card-photo" />
-              <h2 class="card-title"><span lang="en">Growing Business</span></h2>
+              <h2 class="card-title title"><span lang="en">Growing Business</span></h2>
               <p class="card-subtitle">Додаток</p>
             </a>
           </li>
@@ -120,20 +128,25 @@
     <!-- Подвал -->
     <footer>
       <!-- Лого -->
-      <a href="index.html" lang="en" class="logo"><span>Web</span>Studio</a>
+      <a href="index.html" lang="en" class="logo link"><span>Web</span>Studio</a>
       <!-- Адрес и контакты -->
-      <address class="footer-address">
-        <ul class="contact-list">
-          <li class="contact-item">
+      <address class="footer-address address">
+        <ul class="contact-list list">
+          <li class="contact-item link">
             <a
               href="https://goo.gl/maps/pj5dTkwZmLneym9N6"
               target="_blank"
               rel="noopener nofollow noreferrer"
+              class="link"
               >м. Київ, пр-т Лесі Українки, 26</a
             >
           </li>
-          <li class="contact-item"><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li class="contact-item"><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+          <li class="contact-item link">
+            <a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a>
+          </li>
+          <li class="contact-item link">
+            <a href="tel:+380961111111" class="link">+38 096 111 11 11</a>
+          </li>
         </ul>
       </address>
     </footer>
