add logo and background styles

--- a/portfolio.html
+++ b/portfolio.html
@@ -17,7 +17,9 @@
     <!-- Шапка сайта -->
     <header class="page-header">
       <!-- Лого -->
-      <a href="index.html" lang="en" class="logo link"><span>Web</span>Studio</a>
+      <a href="index.html" lang="en" class="logo link"
+        >Web<span class="logo-header">Studio</span></a
+      >
       <!-- Навигация -->
       <nav class="site-nav">
         <ul class="nav-list list">
@@ -126,13 +128,15 @@
       </section>
     </main>
     <!-- Подвал -->
-    <footer>
+    <footer class="page-footer">
       <!-- Лого -->
-      <a href="index.html" lang="en" class="logo link"><span>Web</span>Studio</a>
+      <a href="index.html" lang="en" class="logo link"
+        >Web<span class="logo-footer">Studio</span></a
+      >
       <!-- Адрес и контакты -->
-      <address class="footer-address address">
-        <ul class="contact-list list">
-          <li class="contact-item link">
+      <address class="footer-address">
+        <ul class="footer-contact-list list">
+          <li class="contact-item">
             <a
               href="https://goo.gl/maps/pj5dTkwZmLneym9N6"
               target="_blank"
@@ -141,10 +145,10 @@
               >м. Київ, пр-т Лесі Українки, 26</a
             >
           </li>
-          <li class="contact-item link">
+          <li class="contact-item">
             <a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a>
           </li>
-          <li class="contact-item link">
+          <li class="contact-item">
             <a href="tel:+380961111111" class="link">+38 096 111 11 11</a>
           </li>
         </ul>
