--- a/portfolio.html
+++ b/portfolio.html
@@ -61,14 +61,14 @@
         <ul class="portfolio-cards list">
           <li class="card">
             <a href="" class="card-link link">
-              <img src="./images/img_1.jpg" alt="" class="card-photo" />
+              <img src="./images/img_1.jpg" alt="" class="card-photo" width="370" />
               <h2 class="card-title title">Технокряк</h2>
               <p class="card-subtitle">Веб-сайт</p>
             </a>
           </li>
           <li class="card">
             <a href="" class="card-link link">
-              <img src="./images/img_2.jpg" alt="" class="card-photo" />
+              <img src="./images/img_2.jpg" alt="" class="card-photo" width="370" />
               <h2 class="card-title title">
                 Постер <span lang="en">New Orlean vs Golden Star</span>
               </h2>
@@ -77,49 +77,49 @@
           </li>
           <li class="card">
             <a href="" class="card-link link">
-              <img src="./images/img_3.jpg" alt="" class="card-photo" />
+              <img src="./images/img_3.jpg" alt="" class="card-photo" width="370" />
               <h2 class="card-title title">Ресторан <span lang="en">Seafood</span></h2>
               <p class="card-subtitle">Додаток</p>
             </a>
           </li>
           <li class="card">
             <a href="" class="card-link link">
-              <img src="./images/img_4.jpg" alt="" class="card-photo" />
+              <img src="./images/img_4.jpg" alt="" class="card-photo" width="370" />
               <h2 class="card-title title">Проєкт <span lang="en">Prime</span></h2>
               <p class="card-subtitle">Маркетинг</p>
             </a>
           </li>
           <li class="card">
             <a href="" class="card-link link">
-              <img src="./images/img_5.jpg" alt="" class="card-photo" />
+              <img src="./images/img_5.jpg" alt="" class="card-photo" width="370" />
               <h2 class="card-title title">Проєкт <span lang="en">Boxes</span></h2>
               <p class="card-subtitle">Додаток</p>
             </a>
           </li>
           <li class="card">
             <a href="" class="card-link link">
-              <img src="./images/img_6.jpg" alt="" class="card-photo" />
+              <img src="./images/img_6.jpg" alt="" class="card-photo" width="370" />
               <h2 class="card-title title"><span lang="en">Inspiration has no Borders</span></h2>
               <p class="card-subtitle">Веб-сайт</p>
             </a>
           </li>
           <li class="card">
             <a href="" class="card-link link">
-              <img src="./images/img_7.jpg" alt="" class="card-photo" />
+              <img src="./images/img_7.jpg" alt="" class="card-photo" width="370" />
               <h2 class="card-title title">Видання <span lang="en">Limited Edition</span></h2>
               <p class="card-subtitle">Дизайн</p>
             </a>
           </li>
           <li class="card">
             <a href="" class="card-link link">
-              <img src="./images/img_8.jpg" alt="" class="card-photo" />
+              <img src="./images/img_8.jpg" alt="" class="card-photo" width="370" />
               <h2 class="card-title title">Проєкт <span lang="en">LAB</span></h2>
               <p class="card-subtitle">Маркетинг</p>
             </a>
           </li>
           <li class="card">
             <a href="" class="card-link link">
-              <img src="./images/img_9.jpg" alt="" class="card-photo" />
+              <img src="./images/img_9.jpg" alt="" class="card-photo" width="370" />
               <h2 class="card-title title"><span lang="en">Growing Business</span></h2>
               <p class="card-subtitle">Додаток</p>
             </a>
